// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render completed determinant progress circle 1`] = `
.c0 {
  color: #2AAB3F;
}

<div>
  <svg
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="100"
    class="c0"
    fill="none"
    height="3rem"
    role="progressbar"
    size="48"
    style="width: 3rem; height: 3rem;"
    viewBox="0 0 24 24"
    width="3rem"
  >
    <title />
    <path
      clip-rule="evenodd"
      d="M12.1 22.101c5.524 0 10.001-4.477 10.001-10 0-5.524-4.477-10.001-10-10.001-5.524 0-10 4.477-10 10 0 5.524 4.476 10.001 10 10.001z"
      fill="currentColor"
      fill-rule="evenodd"
    />
    <path
      clip-rule="evenodd"
      d="M10.997 13.434L8.92 11.339l-1.32 1.333 3.396 3.429L17.6 9.434 16.28 8.1l-5.283 5.334z"
      fill="#fff"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`render determinant progress circle 1`] = `
.c0 {
  height: 3rem;
  width: 3rem;
}

.c1 {
  fill: transparent;
  stroke-width: 0.25rem;
  stroke: #ECEEF5;
}

.c2 {
  fill: transparent;
  stroke-width: 0.25rem;
  stroke: #ECEEF5;
  stroke-dasharray: 138.23007675795088 138.23007675795088;
  stroke: #3C64F4;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  stroke-dashoffset: 69.11503837897544;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transition: stroke-dashoffset 0.35s;
  transition: stroke-dashoffset 0.35s;
}

.c3 {
  font-size: 0.875rem;
  font-weight: 400;
}

<div>
  <svg
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    class="c0"
    role="progressbar"
  >
    <circle
      class="c1"
      cx="1.5rem"
      cy="1.5rem"
      r="1.375rem"
    />
    <circle
      class="c2"
      cx="1.5rem"
      cy="1.5rem"
      r="1.375rem"
    />
    <text
      class="c3"
      dominant-baseline="central"
      text-anchor="middle"
      x="50%"
      y="50%"
    >
      50
      %
    </text>
  </svg>
</div>
`;

exports[`render error determinant progress circle 1`] = `
.c0 {
  color: #DB3643;
}

<div>
  <svg
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="0"
    aria-valuetext="Error"
    class="c0"
    fill="none"
    height="3rem"
    role="progressbar"
    size="48"
    style="width: 3rem; height: 3rem;"
    viewBox="0 0 20 20"
    width="3rem"
  >
    <title />
    <circle
      cx="10"
      cy="10"
      fill="currentColor"
      r="8"
    />
    <path
      d="M11 14.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1zM11 10.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v5z"
      fill="#fff"
    />
  </svg>
</div>
`;

exports[`render indeterminant progress bar 1`] = `
.c0 {
  height: 3rem;
  width: 3rem;
}

.c1 {
  fill: transparent;
  stroke-width: 0.25rem;
  stroke: #ECEEF5;
}

.c2 {
  fill: transparent;
  stroke-width: 0.25rem;
  stroke: #ECEEF5;
  stroke-dasharray: 138.23007675795088 138.23007675795088;
  stroke: #3C64F4;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-animation: dpAsNn 1s ease infinite;
  animation: dpAsNn 1s ease infinite;
  stroke-dashoffset: 138.23007675795088;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transition: stroke-dashoffset 0.35s;
  transition: stroke-dashoffset 0.35s;
}

<div>
  <svg
    class="c0"
    role="progressbar"
  >
    <circle
      class="c1"
      cx="1.5rem"
      cy="1.5rem"
      r="1.375rem"
    />
    <circle
      class="c2"
      cx="1.5rem"
      cy="1.5rem"
      r="1.375rem"
    />
  </svg>
</div>
`;

exports[`render large progress circle 1`] = `
.c0 {
  height: 5rem;
  width: 5rem;
}

.c1 {
  fill: transparent;
  stroke-width: 0.5rem;
  stroke: #ECEEF5;
}

.c2 {
  fill: transparent;
  stroke-width: 0.5rem;
  stroke: #ECEEF5;
  stroke-dasharray: 226.1946710584651 226.1946710584651;
  stroke: #3C64F4;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-animation: ibtQPx 1s ease infinite;
  animation: ibtQPx 1s ease infinite;
  stroke-dashoffset: 226.1946710584651;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transition: stroke-dashoffset 0.35s;
  transition: stroke-dashoffset 0.35s;
}

<div>
  <svg
    class="c0"
    role="progressbar"
  >
    <circle
      class="c1"
      cx="2.5rem"
      cy="2.5rem"
      r="2.25rem"
    />
    <circle
      class="c2"
      cx="2.5rem"
      cy="2.5rem"
      r="2.25rem"
    />
  </svg>
</div>
`;

exports[`render medium progress circle 1`] = `
.c0 {
  height: 3rem;
  width: 3rem;
}

.c1 {
  fill: transparent;
  stroke-width: 0.25rem;
  stroke: #ECEEF5;
}

.c2 {
  fill: transparent;
  stroke-width: 0.25rem;
  stroke: #ECEEF5;
  stroke-dasharray: 138.23007675795088 138.23007675795088;
  stroke: #3C64F4;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-animation: dpAsNn 1s ease infinite;
  animation: dpAsNn 1s ease infinite;
  stroke-dashoffset: 138.23007675795088;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transition: stroke-dashoffset 0.35s;
  transition: stroke-dashoffset 0.35s;
}

<div>
  <svg
    class="c0"
    role="progressbar"
  >
    <circle
      class="c1"
      cx="1.5rem"
      cy="1.5rem"
      r="1.375rem"
    />
    <circle
      class="c2"
      cx="1.5rem"
      cy="1.5rem"
      r="1.375rem"
    />
  </svg>
</div>
`;

exports[`render small progress circle 1`] = `
.c0 {
  height: 2rem;
  width: 2rem;
}

.c1 {
  fill: transparent;
  stroke-width: 0.25rem;
  stroke: #ECEEF5;
}

.c2 {
  fill: transparent;
  stroke-width: 0.25rem;
  stroke: #ECEEF5;
  stroke-dasharray: 87.96459430051421 87.96459430051421;
  stroke: #3C64F4;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-animation: cYXnLG 1s ease infinite;
  animation: cYXnLG 1s ease infinite;
  stroke-dashoffset: 87.96459430051421;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transition: stroke-dashoffset 0.35s;
  transition: stroke-dashoffset 0.35s;
}

<div>
  <svg
    class="c0"
    role="progressbar"
  >
    <circle
      class="c1"
      cx="1rem"
      cy="1rem"
      r="0.875rem"
    />
    <circle
      class="c2"
      cx="1rem"
      cy="1rem"
      r="0.875rem"
    />
  </svg>
</div>
`;

exports[`render xSmall progress circle 1`] = `
.c0 {
  height: 1rem;
  width: 1rem;
}

.c1 {
  fill: transparent;
  stroke-width: 0.125rem;
  stroke: #ECEEF5;
}

.c2 {
  fill: transparent;
  stroke-width: 0.125rem;
  stroke: #ECEEF5;
  stroke-dasharray: 43.982297150257104 43.982297150257104;
  stroke: #3C64F4;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-animation: cWvsXs 1s ease infinite;
  animation: cWvsXs 1s ease infinite;
  stroke-dashoffset: 43.982297150257104;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transition: stroke-dashoffset 0.35s;
  transition: stroke-dashoffset 0.35s;
}

<div>
  <svg
    class="c0"
    role="progressbar"
  >
    <circle
      class="c1"
      cx="0.5rem"
      cy="0.5rem"
      r="0.4375rem"
    />
    <circle
      class="c2"
      cx="0.5rem"
      cy="0.5rem"
      r="0.4375rem"
    />
  </svg>
</div>
`;
